[package]
name = "cortexforge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# The next line is needed for arch, see https://www.reddit.com/r/rust/comments/16vsda6/issues_compiling_inkwell_in_rust_with_llvmsys/
llvm-sys-170 = { package = "llvm-sys", version = "170.0.1", features = ["prefer-static"] }
inkwell = { version = "0.4.0", features = ["llvm17-0"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
